--- a/production/buttons/showcase/index.html
+++ b/production/buttons/showcase/index.html
@@ -546,7 +546,7 @@
                 <button class="codebox-copy">Copy</button>
               </header>
 
-  <!-- USED FOR COPY AND PASTE SCRIPT --> 
+  <!-- USED FOR COPY AND PASTE SCRIPT -->
   <div class="is-hidden docs-setup-code">
   <!-- Buttons core css -->
   <link rel="stylesheet" href="css/buttons.css">
@@ -599,7 +599,7 @@
     <div class="docs-content">
       <ol class="docs-list">
           <li>
-              <a class="button button-rounded button-plain button-small-caps button-border" href="https://github.com/alexwolfe/Buttons/raw/gh-pages/Buttons.zip"><i class="fa fa-github"></i> CLONE GITHUB REPO</a>
+              <a class="button button-rounded button-plain button-small-caps button-border" href="https://github.com/alexwolfe/Buttons"><i class="fa fa-github"></i> CLONE GITHUB REPO</a>
           </li>
           <li>Make sure you have <a href="">Node.js</a> installed.</li>
           <li>From the command line cd into the root for the Buttons directory</li>
