Latest showcase adds github stars beside Download button.

--- a/production/buttons/index.html
+++ b/production/buttons/index.html
@@ -71,7 +71,8 @@
       </p>
 
       <a class="hero-cta button button-plain button-uppercase button-rounded" href="css/buttons.css">Download</a>
-      <iframe src="http://ghbtns.com/github-btn.html?user=unicorn-ui&repo=Buttons&type=watch&count=true" class="github-button" allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
+      <iframe src="http://ghbtns.com/github-btn.html?user=unicorn-ui&repo=Buttons&type=watch&count=true" class="github-button" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+
     </div>
 
 
@@ -163,7 +164,7 @@
             Icons provided by <a target="_blank" href="http://fortawesome.github.io/Font-Awesome/">Font Awesome</a> Great for mobile devices</h4>
         </header>
 
-  <div class="showcase-examples l-center svgs">
+  <div class="showcase-examples l-center">
   <button class="button button-large button-plain button-border button-circle"><i class="fa fa-reply"></i></button>
   <button class="button button-large button-plain button-border button-box"><i class="fa fa-star"></i></button>
   <button class="button button-large button-plain button-border button-square"><i class="fa fa-trash-o"></i></button>
@@ -547,7 +548,7 @@
                 <button class="codebox-copy">Copy</button>
               </header>
 
-  <!-- USED FOR COPY AND PASTE SCRIPT -->
+  <!-- USED FOR COPY AND PASTE SCRIPT --> 
   <div class="is-hidden docs-setup-code">
   <!-- Buttons core css -->
   <link rel="stylesheet" href="css/buttons.css">
@@ -600,7 +601,7 @@
     <div class="docs-content">
       <ol class="docs-list">
           <li>
-              <a class="button button-rounded button-plain button-small-caps button-border" href="https://github.com/alexwolfe/Buttons"><i class="fa fa-github"></i> CLONE GITHUB REPO</a>
+              <a class="button button-rounded button-plain button-small-caps button-border" href="https://github.com/alexwolfe/Buttons/raw/gh-pages/Buttons.zip"><i class="fa fa-github"></i> CLONE GITHUB REPO</a>
           </li>
           <li>Make sure you have <a href="">Node.js</a> installed.</li>
           <li>From the command line cd into the root for the Buttons directory</li>
