--- a/production/buttons/index.html
+++ b/production/buttons/index.html
@@ -541,7 +541,7 @@
     <div class="docs-content">
       <ol class="docs-list">
           <li>
-              <a class="button button-rounded button-plain button-small-caps button-border" href="css/buttons.css"><i class="fa fa-download"></i> DOWNLOAD BUTTONS</a>
+              <a class="button button-rounded button-plain button-small-caps button-border" href="css/buttons.css"><i class="fa fa-download"></i> DOWNLOAD</a>
           </li>
           <li> Include buttons in your website
             <div class="codebox docs-setup-guide l-margin-top-0">
@@ -550,13 +550,14 @@
                 <button class="codebox-copy">Copy</button>
               </header>
 
-  <!-- USED FOR COPY AND PASTE SCRIPT --> 
+  <!-- USED FOR COPY AND PASTE SCRIPT -->
   <div class="is-hidden docs-setup-code">
   <!-- Buttons core css -->
   <link rel="stylesheet" href="css/buttons.css">
 
   <!-- Only needed if you want support for dropdown menus -->
-  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
   <script type="text/javascript" src="js/buttons.js"></script>
 
   <!-- Only needed if you want font icons -->
@@ -569,7 +570,7 @@
   &lt;link rel=&quot;stylesheet&quot; href=&quot;css/buttons.css&quot;&gt;
 
   &lt;!-- Only needed if you want support for dropdown menus --&gt;
-  &lt;script src=&quot;http://code.jquery.com/jquery-1.10.1.min.js&quot;&gt;&lt;/script&gt;
+  &lt;script src=&quot;//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js&quot;&gt;&lt;/script&gt;
   &lt;script type=&quot;text/javascript&quot; src=&quot;js/buttons.js&quot;&gt;&lt;/script&gt;
 
   &lt;!-- Only needed if you want font icons --&gt;
@@ -589,9 +590,9 @@
 
     <div class="docs-content">
       <ol class="docs-list">
-          <li>Compass has been replaced with autoprefixer. Compass is not reccomended but it is still supported.</li>
-          <li>Button colors are now complete independant (ex. button-primary) we no longer have classes liek <code>button-flat-primary</code> to achive this you now simly add <code>button-flat button-primary</code></li>
-          <li>Buttons styles are now independant (ex. button-flat, button-3d, etc.). You can apply these styles and they will automatically pick up the color attached to the button (ex. button-primary button-3d)</li>
+          <li>Compass has been replaced with [autoprefixer](https://github.com/postcss/autoprefixer). Compass is not recommended but it is still supported.</li>
+          <li>Button colors are now complete independent (ex. button-primary) we no longer have classes like <code>button-flat-primary</code> to achieve this you now simply add <code>button-flat button-primary</code></li>
+          <li>Buttons styles are now independent (ex. button-flat, button-3d, etc.). You can apply these styles and they will automatically pick up the color attached to the button (ex. button-primary button-3d)</li>
       </ol>
   </section>
   <!-- FORM BUTTONS -->
@@ -603,9 +604,9 @@
     <div class="docs-content">
       <ol class="docs-list">
           <li>
-              <a class="button button-rounded button-plain button-small-caps button-border" href="https://github.com/alexwolfe/Buttons/raw/gh-pages/Buttons.zip"><i class="fa fa-github"></i> CLONE GITHUB REPO</a>
+              <a class="button button-rounded button-plain button-small-caps button-border" href="https://github.com/alexwolfe/Buttons/raw/gh-pages/Buttons.zip"><i class="fa fa-github"></i> CLONE REPO</a>
           </li>
-          <li>Make sure you have <a href="">Node.js</a> installed.</li>
+          <li>Make sure you have <a href="http://nodejs.org/">Node.js</a> installed.</li>
           <li>From the command line cd into the root for the Buttons directory</li>
           <li>Run <code>npm install</code> or <code>sudo npm install</code> (depending on your system permissions).</li>
           <li>On the command line run <code>grunt dev</code>, this will open a browser with Buttons</li>
@@ -677,7 +678,7 @@
 
   <!-- JAVASCRIPT INCLUDES -->
   <script src="https://google-code-prettify.googlecode.com/svn/loader/prettify.js"></script>
-  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/scrollMonitor.js"></script>
   <script type="text/javascript" src="js/zeroclipboard/dist/ZeroClipboard.js"></script>
   <script type="text/javascript" src="js/polyfill.js"></script>
