--- a/production/buttons/builder/index.html
+++ b/production/buttons/builder/index.html
@@ -85,8 +85,7 @@
 <a href="#" class="button button-circle button-royal button-jumbo">Go</a>
 <button class="button button-3d button-primary button-circle button-jumbo"><i class="fa fa-thumbs-up"></i></button>
 <button class="button button-3d button-action button-circle button-jumbo"><i class="fa fa-thumbs-up"></i></button>
-<button class="button button-3d button-highlight button-circle button-jumbo"><i class="fa fa-thumbs-up"></i></button>
-<button class="button button-3d button-caution button-circle button-jumbo"><i class="fa fa-thumbs-up"></i></button></section><code></code></section><section id="dropdown" data-type="build" data-name="dropdown" class="showcase"><h3>Dropdown Buttons</h3><section class="showcase-examples"><span class="button-dropdown" data-buttons="dropdown">
+<button class="button button-3d button-highlight button-circle button-jumbo"><i class="fa fa-thumbs-up"></i></button></section><code></code></section><section id="dropdown" data-type="build" data-name="dropdown" class="showcase"><h3>Dropdown Buttons</h3><section class="showcase-examples"><span class="button-dropdown" data-buttons="dropdown">
   <button class="button button-rounded">
     Select Me <i class="fa fa-caret-down"></i>
   </button>
@@ -163,7 +162,6 @@
 <a href="#" class="button button-rounded button-primary"><i class="fa fa-refresh"></i> press me</a>
 <a href="#" class="button button-rounded button-action"><i class="fa fa-cloud"></i> press me</a>
 <a href="#" class="button button-rounded button-highlight"><i class="fa fa-camera"></i> press me</a>
-<a href="#" class="button button-rounded button-caution"><i class="fa fa-code"></i> press me</a>
 <button class="button button-large button-primary button-border button-circle"><i class="fa fa-reply"></i></button>
 <button class="button button-large button-primary button-border button-box"><i class="fa fa-star"></i></button>
 <button class="button button-large button-primary button-borderless"><i class="fa fa-tag"></i></button>
@@ -188,12 +186,12 @@
 <br/>
 <a href="http://unicorn-ui.com/" class="button button-block button-rounded button-caution button-large">Go</a>
 <br/>
-<a href="http://unicorn-ui.com/" class="button button-block button-rounded button-royal button-large">Go</a></section><code></code></section><section id="sizes" data-type="example" data-name="sizes" class="showcase"><h3>Button Sizes</h3><section class="showcase-examples"><a href="#" class="button button-rounded button-primary button-giant">press me</a>
+<a href="http://unicorn-ui.com/" class="button button-block button-rounded button-royal button-large">Go</a></section><code></code></section><section id="sizes" data-type="example" data-name="sizes" class="showcase"><h3>Button Sizes</h3><section class="showcase-examples"><div><a href="#" class="button button-rounded button-primary button-giant">press me</a>
 <a href="#" class="button button-rounded button-primary button-jumbo">press me</a>
-<a href="#" class="button button-rounded button-primary button-large">press me</a>
+<a href="#" class="button button-rounded button-primary button-large">press me</a></div><div> 
 <a href="#" class="button button-rounded button-primary">press me</a>
 <a href="#" class="button button-rounded button-primary button-small">press me</a>
-<a href="#" class="button button-rounded button-primary button-tiny">press me</a></section><code></code></section><section id="wrappers" data-type="example" data-name="wrappers" class="showcase"><h3>Button Wrappers</h3><section class="showcase-examples"><span class="button-wrap">
+<a href="#" class="button button-rounded button-primary button-tiny">press me</a></div></section><code></code></section><section id="wrappers" data-type="example" data-name="wrappers" class="showcase"><h3>Button Wrappers</h3><section class="showcase-examples"><span class="button-wrap">
   <button class="button button-circle">
     <i class="fa fa-cloud"></i>
   </button>
