WIP - settings all types to options.types for now

--- a/production/buttons/builder/index.html
+++ b/production/buttons/builder/index.html
@@ -14,7 +14,7 @@
   fjs.parentNode.insertBefore(js, fjs);
   return window.twttr || (t = { _e: [], ready: function (f) { t._e.push(f) } });
   }(document, "script", "twitter-wjs"));
-  </script><a href="https://twitter.com/share" data-url="http://unicorn-ui.com/buttons/builder/" data-text="Buttons - a customizable CSS button library built with Sass &amp;amp; Compass" class="twitter-share-button">Tweet</a><script type="text/javascript">!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></section></section></header><section class="page"><section id="flat" data-type="build" data-name="flat" class="showcase"><h3>Flat Buttons</h3><section class="showcase-examples"><a href="#" class="button button-rounded">press me</a>
+  </script><a href="https://twitter.com/share" data-url="http://unicorn-ui.com/buttons/builder/" data-text="Buttons - a customizable CSS button library built with Sass &amp;amp; Compass" class="twitter-share-button">Tweet</a><script type="text/javascript">!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></section></section></header><section class="page"><section id="flat" data-type="example" data-name="flat" class="showcase"><h3>Flat Buttons</h3><section class="showcase-examples"><a href="#" class="button button-rounded">press me</a>
 <a href="#" class="button button-rounded button-primary">press me</a>
 <a href="#" class="button button-rounded button-action">press me</a>
 <a href="#" class="button button-rounded button-highlight">press me</a>
@@ -39,7 +39,7 @@
 <a href="#" class="button button-glow button-action">press me</a>
 <a href="#" class="button button-glow button-highlight">press me</a>
 <a href="#" class="button button-glow button-caution">press me</a>
-<a href="#" class="button button-glow button-royal">press me</a></section><code></code></section><section id="rounded" data-type="build" data-name="rounded" class="showcase"><h3>Rounded Buttons</h3><section class="showcase-examples"><a href="#" class="button button-rounded">press me</a>
+<a href="#" class="button button-glow button-royal">press me</a></section><code></code></section><section id="rounded" data-type="example" data-name="rounded" class="showcase"><h3>Rounded Buttons</h3><section class="showcase-examples"><a href="#" class="button button-rounded">press me</a>
 <a href="#" class="button button-rounded button-primary">press me</a>
 <a href="#" class="button button-rounded button-action">press me</a>
 <a href="#" class="button button-rounded button-highlight">press me</a>
@@ -66,12 +66,12 @@
   <button class="button button-large button-plain button-border button-box"><i class="fa fa-star"></i></button>
   <button class="button button-large button-plain button-border button-box"><i class="fa fa-trash-o"></i></button>
   <button class="button button-large button-plain button-border button-box"><i class="fa fa-tag"></i></button>
-</div></section><code></code></section><section id="pill" data-type="build" data-name="pill" class="showcase"><h3>Pill Buttons</h3><section class="showcase-examples"><a href="#" class="button button-raised button-pill">press me</a>
+</div></section><code></code></section><section id="pill" data-type="example" data-name="pill" class="showcase"><h3>Pill Buttons</h3><section class="showcase-examples"><a href="#" class="button button-raised button-pill">press me</a>
 <a href="#" class="button button-raised button-pill button-primary">press me</a>
 <a href="#" class="button button-raised button-pill button-inverse">press me</a>
 <a href="#" class="button button-pill button-action">press me</a>
 <a href="#" class="button button-pill button-highlight">press me</a>
-<a href="#" class="button button-pill button-caution">press me</a></section><code></code></section><section id="circle" data-type="build" data-name="circle" class="showcase"><h3>Circle Buttons</h3><section class="showcase-examples"><button class="button button-circle button-tiny"><i class="fa fa-plus"></i></button>
+<a href="#" class="button button-pill button-caution">press me</a></section><code></code></section><section id="circle" data-type="example" data-name="circle" class="showcase"><h3>Circle Buttons</h3><section class="showcase-examples"><button class="button button-circle button-tiny"><i class="fa fa-plus"></i></button>
 <button class="button button-circle button-small"><i class="fa fa-plus"></i></button>
 <button class="button button-circle button-large"><i class="fa fa-plus"></i></button>
 <button class="button button-circle button-jumbo"><i class="fa fa-plus"></i></button>
