--- a/production/buttons/builder/index.html
+++ b/production/buttons/builder/index.html
@@ -113,80 +113,7 @@
       <a href="#">Option Link 3</a>
     </li>
   </ul>
-</span></section><code></code></section><section id="flat" data-type="example" data-name="flat" class="showcase"><h3>Flat Buttons</h3><section class="showcase-examples"><a href="#" class="button button-rounded">press me</a>
-<a href="#" class="button button-rounded button-primary">press me</a>
-<a href="#" class="button button-rounded button-action">press me</a>
-<a href="#" class="button button-rounded button-highlight">press me</a>
-<a href="#" class="button button-rounded button-caution">press me</a>
-<a href="#" class="button button-rounded button-royal">press me</a>
-<br><br>
-<a href="#" class="button button-pill">press me</a>
-<a href="#" class="button button-pill button-primary">press me</a>
-<a href="#" class="button button-pill button-action">press me</a>
-<a href="#" class="button button-pill button-highlight">press me</a>
-<a href="#" class="button button-pill button-caution">press me</a>
-<a href="#" class="button button-pill button-royal">press me</a>
-<br><br>
-<a href="#" class="button">press me</a>
-<a href="#" class="button button-primary">press me</a>
-<a href="#" class="button button-action">press me</a>
-<a href="#" class="button button-highlight">press me</a>
-<a href="#" class="button button-caution">press me</a>
-<a href="#" class="button button-royal">press me</a>
-</section><code></code></section><section id="rounded" data-type="example" data-name="rounded" class="showcase"><h3>Rounded Buttons</h3><section class="showcase-examples"><a href="#" class="button button-rounded">press me</a>
-<a href="#" class="button button-rounded button-primary">press me</a>
-<a href="#" class="button button-rounded button-action">press me</a>
-<a href="#" class="button button-rounded button-highlight">press me</a>
-<a href="#" class="button button-rounded button-caution">press me</a>
-<a href="#" class="button button-rounded button-royal">press me</a>
-</section><code></code></section><section id="pill" data-type="example" data-name="pill" class="showcase"><h3>Pill Buttons</h3><section class="showcase-examples"><a href="#" class="button button-raised button-pill">press me</a>
-<a href="#" class="button button-raised button-pill button-primary">press me</a>
-<a href="#" class="button button-raised button-pill button-inverse">press me</a>
-<a href="#" class="button button-pill button-action">press me</a>
-<a href="#" class="button button-pill button-highlight">press me</a>
-<a href="#" class="button button-pill button-caution">press me</a></section><code></code></section><section id="circle" data-type="example" data-name="circle" class="showcase"><h3>Circle Buttons</h3><section class="showcase-examples"><button class="button button-circle button-tiny"><i class="fa fa-plus"></i></button>
-<button class="button button-circle button-small"><i class="fa fa-plus"></i></button>
-<button class="button button-circle button-large"><i class="fa fa-plus"></i></button>
-<button class="button button-circle button-jumbo"><i class="fa fa-plus"></i></button>
-<a href="#" class="button button-raised button-circle button-primary button-jumbo"><i class="fa fa-thumbs-up"></i></a>
-<a href="#" class="button button-raised button-circle button-action button-jumbo"><i class="fa fa-thumbs-up"></i></a>
-<button class="button button-border button-circle button-jumbo button-primary"><i class="fa fa-reply"></i></button>
-<button class="button button-border button-circle button-jumbo button-action"><i class="fa fa-reply"></i></button>
-<a href="#" class="button button-circle button-action button-jumbo">Go</a>
-<a href="#" class="button button-circle button-highlight button-jumbo">Go</a>
-<a href="#" class="button button-circle button-caution button-jumbo">Go</a>
-<a href="#" class="button button-circle button-royal button-jumbo">Go</a>
-<button class="button button-3d button-primary button-circle button-jumbo"><i class="fa fa-thumbs-up"></i></button>
-<button class="button button-3d button-action button-circle button-jumbo"><i class="fa fa-thumbs-up"></i></button>
-<button class="button button-3d button-highlight button-circle button-jumbo"><i class="fa fa-thumbs-up"></i></button></section><code></code></section><section id="square" data-type="example" data-name="square" class="showcase"><h3>Square &amp; Box Buttons</h3><section class="showcase-examples"><button class="button button-square button-tiny"><i class="fa fa-plus"></i></button>
-<button class="button button-primary button-square button-small"><i class="fa fa-plus"></i></button>
-<button class="button button-action button-square"><i class="fa fa-plus"></i></button>
-<button class="button button-highlight button-square button-large"><i class="fa fa-plus"></i></button>
-<button class="button button-caution button-square button-jumbo"><i class="fa fa-plus"></i></button>
-<button class="button button-royal button-square button-giant"><i class="fa fa-plus"></i></button>
-<button class="button button-royal button-box button-giant"><i class="fa fa-plus"></i></button>
-<button class="button button-caution button-box button-jumbo"><i class="fa fa-plus"></i></button>
-<button class="button button-highlight button-box button-large"><i class="fa fa-plus"></i></button>
-<button class="button button-action button-box"><i class="fa fa-plus"></i></button>
-<button class="button button-primary button-box button-small"><i class="fa fa-plus"></i></button>
-<button class="button button-box button-tiny"><i class="fa fa-plus"></i></button></section><code></code></section><section id="icon" data-type="example" data-name="icon" class="showcase"><h3>Icon Buttons</h3><section class="showcase-examples"><a href="#" class="button button-rounded"><i class="fa fa-github"></i> press me</a>
-<a href="#" class="button button-rounded button-primary"><i class="fa fa-refresh"></i> press me</a>
-<a href="#" class="button button-rounded button-action"><i class="fa fa-cloud"></i> press me</a>
-<a href="#" class="button button-rounded button-highlight"><i class="fa fa-camera"></i> press me</a>
-<button class="button button-large button-primary button-border button-circle"><i class="fa fa-reply"></i></button>
-<button class="button button-large button-primary button-border button-box"><i class="fa fa-star"></i></button>
-<button class="button button-large button-primary button-borderless"><i class="fa fa-tag"></i></button>
-</section><code></code></section><section id="block" data-type="example" data-name="block" class="showcase"><h3>Block Buttons</h3><section class="showcase-examples"><a href="http://unicorn-ui.com/" class="button button-block button-rounded button-large">Go</a>
-<br/>
-<a href="http://unicorn-ui.com/" class="button button-block button-rounded button-primary button-large">Go</a>
-<br/>
-<a href="http://unicorn-ui.com/" class="button button-block button-rounded button-action button-large">Go</a>
-<br/>
-<a href="http://unicorn-ui.com/" class="button button-block button-rounded button-highlight button-large">Go</a>
-<br/>
-<a href="http://unicorn-ui.com/" class="button button-block button-rounded button-caution button-large">Go</a>
-<br/>
-<a href="http://unicorn-ui.com/" class="button button-block button-rounded button-royal button-large">Go</a></section><code></code></section><section id="sizes" data-type="example" data-name="sizes" class="showcase"><h3>Shapes &amp; Sizes</h3><section class="showcase-examples"><a href="http://unicorn-ui.com/" class="button button-tiny">Go</a>
+</span></section><code></code></section><section id="sizes" data-type="example" data-name="sizes" class="showcase"><h3>Shapes &amp; Sizes</h3><section class="showcase-examples"><a href="http://unicorn-ui.com/" class="button button-tiny">Go</a>
 <a href="http://unicorn-ui.com/" class="button button-rounded button-tiny">Go</a>
 <a href="http://unicorn-ui.com/" class="button button-pill button-tiny">Go</a>
 <button class="button button-square button-tiny"><i class="fa fa-plus"></i></button>
@@ -226,7 +153,44 @@
 <a href="http://unicorn-ui.com/" class="button button-royal button-pill button-giant">Go</a>
 <button class="button button-royal button-square button-giant"><i class="fa fa-plus"></i></button>
 <button class="button button-royal button-box button-giant"><i class="fa fa-plus"></i></button>
-<button class="button button-royal button-circle button-giant"><i class="fa fa-plus"></i></button></section><code></code></section><section id="wrappers" data-type="example" data-name="wrappers" class="showcase"><h3>Button Wrappers</h3><section class="showcase-examples"><span class="button-wrap">
+<button class="button button-royal button-circle button-giant"><i class="fa fa-plus"></i></button></section><code></code></section><section id="flat" data-type="example" data-name="flat" class="showcase"><h3>Flat Buttons</h3><section class="showcase-examples"><a href="#" class="button button-rounded">press me</a>
+<a href="#" class="button button-rounded button-primary">press me</a>
+<a href="#" class="button button-rounded button-action">press me</a>
+<a href="#" class="button button-rounded button-highlight">press me</a>
+<a href="#" class="button button-rounded button-caution">press me</a>
+<a href="#" class="button button-rounded button-royal">press me</a>
+<br><br>
+<a href="#" class="button button-pill">press me</a>
+<a href="#" class="button button-pill button-primary">press me</a>
+<a href="#" class="button button-pill button-action">press me</a>
+<a href="#" class="button button-pill button-highlight">press me</a>
+<a href="#" class="button button-pill button-caution">press me</a>
+<a href="#" class="button button-pill button-royal">press me</a>
+<br><br>
+<a href="#" class="button">press me</a>
+<a href="#" class="button button-primary">press me</a>
+<a href="#" class="button button-action">press me</a>
+<a href="#" class="button button-highlight">press me</a>
+<a href="#" class="button button-caution">press me</a>
+<a href="#" class="button button-royal">press me</a>
+</section><code></code></section><section id="icon" data-type="example" data-name="icon" class="showcase"><h3>Icon Buttons</h3><section class="showcase-examples"><a href="#" class="button button-rounded"><i class="fa fa-github"></i> press me</a>
+<a href="#" class="button button-rounded button-primary"><i class="fa fa-refresh"></i> press me</a>
+<a href="#" class="button button-rounded button-action"><i class="fa fa-cloud"></i> press me</a>
+<a href="#" class="button button-rounded button-highlight"><i class="fa fa-camera"></i> press me</a>
+<button class="button button-large button-primary button-border button-circle"><i class="fa fa-reply"></i></button>
+<button class="button button-large button-primary button-border button-box"><i class="fa fa-star"></i></button>
+<button class="button button-large button-primary button-borderless"><i class="fa fa-tag"></i></button>
+</section><code></code></section><section id="block" data-type="example" data-name="block" class="showcase"><h3>Block Buttons</h3><section class="showcase-examples"><a href="http://unicorn-ui.com/" class="button button-block button-rounded button-large">Go</a>
+<br/>
+<a href="http://unicorn-ui.com/" class="button button-block button-rounded button-primary button-large">Go</a>
+<br/>
+<a href="http://unicorn-ui.com/" class="button button-block button-rounded button-action button-large">Go</a>
+<br/>
+<a href="http://unicorn-ui.com/" class="button button-block button-rounded button-highlight button-large">Go</a>
+<br/>
+<a href="http://unicorn-ui.com/" class="button button-block button-rounded button-caution button-large">Go</a>
+<br/>
+<a href="http://unicorn-ui.com/" class="button button-block button-rounded button-royal button-large">Go</a></section><code></code></section><section id="wrappers" data-type="example" data-name="wrappers" class="showcase"><h3>Button Wrappers</h3><section class="showcase-examples"><span class="button-wrap">
   <button class="button button-circle">
     <i class="fa fa-cloud"></i>
   </button>
