--- a/production/buttons/builder/index.html
+++ b/production/buttons/builder/index.html
@@ -14,7 +14,14 @@
   fjs.parentNode.insertBefore(js, fjs);
   return window.twttr || (t = { _e: [], ready: function (f) { t._e.push(f) } });
   }(document, "script", "twitter-wjs"));
-  </script><a href="https://twitter.com/share" data-url="http://unicorn-ui.com/buttons/builder/" data-text="Buttons - a customizable CSS button library built with Sass &amp;amp; Compass" class="twitter-share-button">Tweet</a><script type="text/javascript">!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></section></section></header><section class="page"><section id="border" data-type="build" data-name="border" class="showcase"><h3>Border &amp; Borderless Buttons</h3><p>TODO: Incorporate mobile example and fix this up</p><section class="showcase-examples"><a href="#" class="button button-border button-primary button-rounded">press me</a>
+  </script><a href="https://twitter.com/share" data-url="http://unicorn-ui.com/buttons/builder/" data-text="Buttons - a customizable CSS button library built with Sass &amp;amp; Compass" class="twitter-share-button">Tweet</a><script type="text/javascript">!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></section></section></header><div>@import 'types/raised';
+@import 'types/3d';
+@import 'types/glow';
+@import 'types/dropdown';
+@import 'types/groups';
+@import 'types/wrapper';
+@import 'types/longshadow';
+@import 'types/sizes';</div><section class="page"><section id="border" data-type="build" data-name="border" class="showcase"><h3>Border &amp; Borderless Buttons</h3><p>TODO: Incorporate mobile example and fix this up</p><section class="showcase-examples"><a href="#" class="button button-border button-primary button-rounded">press me</a>
 <a href="#" class="button button-border button-action button-pill">press me</a>
 <a href="#" class="button button-border button-highlight button-circle">Go</a>
 <a href="#" class="button button-border button-caution"><i class="fa fa-camera"></i> press me</a>
@@ -113,7 +120,7 @@
       <a href="#">Option Link 3</a>
     </li>
   </ul>
-</span></section><code></code></section><section id="sizes" data-type="example" data-name="sizes" class="showcase"><h3>Shapes &amp; Sizes</h3><section class="showcase-examples"><a href="http://unicorn-ui.com/" class="button button-tiny">Go</a>
+</span></section><code></code></section><section id="sizes" data-type="build" data-name="sizes" class="showcase"><h3>Shapes &amp; Sizes</h3><section class="showcase-examples"><a href="http://unicorn-ui.com/" class="button button-tiny">Go</a>
 <a href="http://unicorn-ui.com/" class="button button-rounded button-tiny">Go</a>
 <a href="http://unicorn-ui.com/" class="button button-pill button-tiny">Go</a>
 <button class="button button-square button-tiny"><i class="fa fa-plus"></i></button>
@@ -173,7 +180,12 @@
 <a href="#" class="button button-highlight">press me</a>
 <a href="#" class="button button-caution">press me</a>
 <a href="#" class="button button-royal">press me</a>
-</section><code></code></section><section id="icon" data-type="example" data-name="icon" class="showcase"><h3>Icon Buttons</h3><section class="showcase-examples"><a href="#" class="button button-rounded"><i class="fa fa-github"></i> press me</a>
+</section><code></code></section><section id="raised" data-type="example" data-name="raised" class="showcase"><h3>Raised Buttons</h3><section class="showcase-examples"><a href="#" class="button button-raised">press me</a>
+<a href="#" class="button button-primary button-raised">press me</a>
+<a href="#" class="button button-raised button-pill">press me</a>
+<a href="#" class="button button-pill button-action">press me</a>
+<a href="#" class="button button-pill button-highlight">press me</a>
+<a href="#" class="button button-pill button-caution">press me</a></section><code></code></section><section id="icon" data-type="example" data-name="icon" class="showcase"><h3>Icon Buttons</h3><section class="showcase-examples"><a href="#" class="button button-rounded"><i class="fa fa-github"></i> press me</a>
 <a href="#" class="button button-rounded button-primary"><i class="fa fa-refresh"></i> press me</a>
 <a href="#" class="button button-rounded button-action"><i class="fa fa-cloud"></i> press me</a>
 <a href="#" class="button button-rounded button-highlight"><i class="fa fa-camera"></i> press me</a>
