--- a/production/buttons/builder/index.html
+++ b/production/buttons/builder/index.html
@@ -14,14 +14,25 @@
   fjs.parentNode.insertBefore(js, fjs);
   return window.twttr || (t = { _e: [], ready: function (f) { t._e.push(f) } });
   }(document, "script", "twitter-wjs"));
-  </script><a href="https://twitter.com/share" data-url="http://unicorn-ui.com/buttons/builder/" data-text="Buttons - a customizable CSS button library built with Sass &amp;amp; Compass" class="twitter-share-button">Tweet</a><script type="text/javascript">!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></section></section></header><div>@import 'types/raised';
-@import 'types/3d';
-@import 'types/glow';
-@import 'types/dropdown';
-@import 'types/groups';
+  </script><a href="https://twitter.com/share" data-url="http://unicorn-ui.com/buttons/builder/" data-text="Buttons - a customizable CSS button library built with Sass &amp;amp; Compass" class="twitter-share-button">Tweet</a><script type="text/javascript">!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></section></section></header><div>@import 'types/groups';
 @import 'types/wrapper';
 @import 'types/longshadow';
-@import 'types/sizes';</div><section class="page"><section id="border" data-type="build" data-name="border" class="showcase"><h3>Border &amp; Borderless Buttons</h3><p>TODO: Incorporate mobile example and fix this up</p><section class="showcase-examples"><a href="#" class="button button-border button-primary button-rounded">press me</a>
+@import 'types/sizes';</div><section class="page"><section id="raised" data-type="build" data-name="raised" class="showcase"><h3>Raised Buttons</h3><section class="showcase-examples"><a href="#" class="button button-raised">press me</a>
+<a href="#" class="button button-primary button-raised">press me</a>
+<a href="#" class="button button-raised button-pill">press me</a>
+<a href="#" class="button button-pill button-action">press me</a>
+<a href="#" class="button button-pill button-highlight">press me</a>
+<a href="#" class="button button-pill button-caution">press me</a></section><code></code></section><section id="glow" data-type="build" data-name="glow" class="showcase"><h3>Glow Buttons</h3><section class="showcase-examples"><a href="#" class="button button-glow ">press me</a>
+<a href="#" class="button button-glow button-primary">press me</a>
+<a href="#" class="button button-glow button-action">press me</a>
+<a href="#" class="button button-glow button-highlight">press me</a>
+<a href="#" class="button button-glow button-caution">press me</a>
+<a href="#" class="button button-glow button-royal">press me</a></section><code></code></section><section id="3d" data-type="build" data-name="3d" class="showcase"><h3>3D Buttons</h3><section class="showcase-examples"><a href="#" class="button button-3d">press me</a>
+<a href="#" class="button button-3d button-primary button-rounded">press me</a>
+<a href="#" class="button button-3d button-action button-pill">press me</a>
+<a href="#" class="button button-3d button-highlight button-circle">Go</a>
+<a href="#" class="button button-3d button-caution"><i class="fa fa-camera"></i> press me</a>
+<a href="#" class="button button-3d button-royal button-rounded">press me</a></section><code></code></section><section id="border" data-type="build" data-name="border" class="showcase"><h3>Border &amp; Borderless Buttons</h3><p>TODO: Incorporate mobile example and fix this up</p><section class="showcase-examples"><a href="#" class="button button-border button-primary button-rounded">press me</a>
 <a href="#" class="button button-border button-action button-pill">press me</a>
 <a href="#" class="button button-border button-highlight button-circle">Go</a>
 <a href="#" class="button button-border button-caution"><i class="fa fa-camera"></i> press me</a>
@@ -37,17 +48,7 @@
   <button class="button button-large button-plain button-border button-box"><i class="fa fa-star"></i></button>
   <button class="button button-large button-plain button-border button-box"><i class="fa fa-trash-o"></i></button>
   <button class="button button-large button-plain button-border button-box"><i class="fa fa-tag"></i></button>
-</div></section><code></code></section><section id="glow" data-type="build" data-name="glow" class="showcase"><h3>Glow Buttons</h3><section class="showcase-examples"><a href="#" class="button button-glow ">press me</a>
-<a href="#" class="button button-glow button-primary">press me</a>
-<a href="#" class="button button-glow button-action">press me</a>
-<a href="#" class="button button-glow button-highlight">press me</a>
-<a href="#" class="button button-glow button-caution">press me</a>
-<a href="#" class="button button-glow button-royal">press me</a></section><code></code></section><section id="3d" data-type="build" data-name="3d" class="showcase"><h3>3D Buttons</h3><section class="showcase-examples"><a href="#" class="button button-3d">press me</a>
-<a href="#" class="button button-3d button-primary button-rounded">press me</a>
-<a href="#" class="button button-3d button-action button-pill">press me</a>
-<a href="#" class="button button-3d button-highlight button-circle">Go</a>
-<a href="#" class="button button-3d button-caution"><i class="fa fa-camera"></i> press me</a>
-<a href="#" class="button button-3d button-royal button-rounded">press me</a></section><code></code></section><section id="dropdown" data-type="build" data-name="dropdown" class="showcase"><h3>Dropdown Buttons</h3><section class="showcase-examples"><span class="button-dropdown" data-buttons="dropdown">
+</div></section><code></code></section><section id="dropdown" data-type="build" data-name="dropdown" class="showcase"><h3>Dropdown Buttons</h3><section class="showcase-examples"><span class="button-dropdown" data-buttons="dropdown">
   <button class="button button-rounded">
     Select Me <i class="fa fa-caret-down"></i>
   </button>
@@ -120,7 +121,34 @@
       <a href="#">Option Link 3</a>
     </li>
   </ul>
-</span></section><code></code></section><section id="sizes" data-type="build" data-name="sizes" class="showcase"><h3>Shapes &amp; Sizes</h3><section class="showcase-examples"><a href="http://unicorn-ui.com/" class="button button-tiny">Go</a>
+</span></section><code></code></section><section id="groups" data-type="build" data-name="groups" class="showcase"><h3>Groups</h3><section class="showcase-examples"><div class="button-group">
+  <button type="button" class="button button-primary">Option 1</button>
+  <button type="button" class="button button-primary">Option 2</button>
+  <button type="button" class="button button-primary">Option 3</button>
+  
+  <!-- DROPDOWN MENU -->
+  <span class="button-dropdown button-dropdown-primary" data-buttons="dropdown">
+    <a href="#" class="button button-primary"> Select Me <i class="fa fa-caret-down"></i></a>
+    
+    <ul class="button-dropdown-list is-below">
+      <li><a href="http://unicorn-ui.com/">Option Link 1</a></li>
+      <li><a href="http://unicorn-ui.com/">Option Link 2</a></li>
+      <li class="button-dropdown-divider"><a href="#">Option Link 3</a></li>
+    </ul>
+  </span>
+</div>
+
+<div class="button-group">
+  <button type="button" class="button button-pill button-action">Option 1</button>
+  <button type="button" class="button button-pill button-action">Option 2</button>
+  <button type="button" class="button button-pill button-action">Option 3</button>
+</div>
+
+<div class="button-group">
+  <button type="button" class="button button-royal button-rounded button-raised">Option 1</button>
+  <button type="button" class="button button-royal button-rounded button-raised">Option 2</button>
+  <button type="button" class="button button-royal button-rounded button-raised">Option 3</button>
+</div></section><code></code></section><section id="sizes" data-type="build" data-name="sizes" class="showcase"><h3>Shapes &amp; Sizes</h3><section class="showcase-examples"><a href="http://unicorn-ui.com/" class="button button-tiny">Go</a>
 <a href="http://unicorn-ui.com/" class="button button-rounded button-tiny">Go</a>
 <a href="http://unicorn-ui.com/" class="button button-pill button-tiny">Go</a>
 <button class="button button-square button-tiny"><i class="fa fa-plus"></i></button>
@@ -180,12 +208,7 @@
 <a href="#" class="button button-highlight">press me</a>
 <a href="#" class="button button-caution">press me</a>
 <a href="#" class="button button-royal">press me</a>
-</section><code></code></section><section id="raised" data-type="example" data-name="raised" class="showcase"><h3>Raised Buttons</h3><section class="showcase-examples"><a href="#" class="button button-raised">press me</a>
-<a href="#" class="button button-primary button-raised">press me</a>
-<a href="#" class="button button-raised button-pill">press me</a>
-<a href="#" class="button button-pill button-action">press me</a>
-<a href="#" class="button button-pill button-highlight">press me</a>
-<a href="#" class="button button-pill button-caution">press me</a></section><code></code></section><section id="icon" data-type="example" data-name="icon" class="showcase"><h3>Icon Buttons</h3><section class="showcase-examples"><a href="#" class="button button-rounded"><i class="fa fa-github"></i> press me</a>
+</section><code></code></section><section id="icon" data-type="example" data-name="icon" class="showcase"><h3>Icon Buttons</h3><section class="showcase-examples"><a href="#" class="button button-rounded"><i class="fa fa-github"></i> press me</a>
 <a href="#" class="button button-rounded button-primary"><i class="fa fa-refresh"></i> press me</a>
 <a href="#" class="button button-rounded button-action"><i class="fa fa-cloud"></i> press me</a>
 <a href="#" class="button button-rounded button-highlight"><i class="fa fa-camera"></i> press me</a>
