--- a/production/buttons/builder/index.html
+++ b/production/buttons/builder/index.html
@@ -14,9 +14,7 @@
   fjs.parentNode.insertBefore(js, fjs);
   return window.twttr || (t = { _e: [], ready: function (f) { t._e.push(f) } });
   }(document, "script", "twitter-wjs"));
-  </script><a href="https://twitter.com/share" data-url="http://unicorn-ui.com/buttons/builder/" data-text="Buttons - a customizable CSS button library built with Sass &amp;amp; Compass" class="twitter-share-button">Tweet</a><script type="text/javascript">!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></section></section></header><div>@import 'types/groups';
-@import 'types/wrapper';
-@import 'types/longshadow';
+  </script><a href="https://twitter.com/share" data-url="http://unicorn-ui.com/buttons/builder/" data-text="Buttons - a customizable CSS button library built with Sass &amp;amp; Compass" class="twitter-share-button">Tweet</a><script type="text/javascript">!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></section></section></header><div>@import 'types/longshadow';
 @import 'types/sizes';</div><section class="page"><section id="raised" data-type="build" data-name="raised" class="showcase"><h3>Raised Buttons</h3><section class="showcase-examples"><a href="#" class="button button-raised">press me</a>
 <a href="#" class="button button-primary button-raised">press me</a>
 <a href="#" class="button button-raised button-pill">press me</a>
@@ -188,7 +186,36 @@
 <a href="http://unicorn-ui.com/" class="button button-royal button-pill button-giant">Go</a>
 <button class="button button-royal button-square button-giant"><i class="fa fa-plus"></i></button>
 <button class="button button-royal button-box button-giant"><i class="fa fa-plus"></i></button>
-<button class="button button-royal button-circle button-giant"><i class="fa fa-plus"></i></button></section><code></code></section><section id="flat" data-type="example" data-name="flat" class="showcase"><h3>Flat Buttons</h3><section class="showcase-examples"><a href="#" class="button button-rounded">press me</a>
+<button class="button button-royal button-circle button-giant"><i class="fa fa-plus"></i></button></section><code></code></section><section id="longshadow" data-type="example" data-name="longshadow" class="showcase"><h3>Longshadow</h3><section class="showcase-examples"><a href="#" class="button button-primary button-box button-giant button-longshadow-right">
+ <i class="fa fa-twitter"></i>
+</a>
+<a href="#" class="button button-caution button-box button-giant button-raised button-longshadow">
+ <i class="fa fa-google-plus"></i>
+</a>
+<a href="#" class="button button-primary button-box button-giant button-longshadow-left">
+ <i class="fa fa-share-alt"></i>
+</a>
+<a href="#" class="button button-highlight button-box button-giant button-longshadow-right">
+ <i class="fa fa-rss"></i>
+</a>
+<a href="#" class="button button-primary button-circle button-giant button-longshadow-right">
+ <i class="fa fa-gear"></i>
+</a></section><code></code></section><section id="wrappers" data-type="build" data-name="wrappers" class="showcase"><h3>Button Wrappers</h3><section class="showcase-examples"><span class="button-wrap">
+  <button class="button button-circle">
+    <i class="fa fa-cloud"></i>
+  </button>
+</span>
+<span class="button-wrap">
+  <button class="button button-circle button-raised button-primary">
+    <i class="fa fa-cloud"></i>
+  </button>
+</span>
+<span class="button-wrap">
+  <a href="http://unicorn-ui.com/" class="button button-pill ">Go</a>
+</span>
+<span class="button-wrap">
+  <a href="http://unicorn-ui.com/" class="button button-pill button-raised button-primary">Go</a>
+</span></section><code></code></section><section id="flat" data-type="example" data-name="flat" class="showcase"><h3>Flat Buttons</h3><section class="showcase-examples"><a href="#" class="button button-rounded">press me</a>
 <a href="#" class="button button-rounded button-primary">press me</a>
 <a href="#" class="button button-rounded button-action">press me</a>
 <a href="#" class="button button-rounded button-highlight">press me</a>
@@ -225,22 +252,7 @@
 <br/>
 <a href="http://unicorn-ui.com/" class="button button-block button-rounded button-caution button-large">Go</a>
 <br/>
-<a href="http://unicorn-ui.com/" class="button button-block button-rounded button-royal button-large">Go</a></section><code></code></section><section id="wrappers" data-type="example" data-name="wrappers" class="showcase"><h3>Button Wrappers</h3><section class="showcase-examples"><span class="button-wrap">
-  <button class="button button-circle">
-    <i class="fa fa-cloud"></i>
-  </button>
-</span>
-<span class="button-wrap">
-  <button class="button button-circle button-raised button-primary">
-    <i class="fa fa-cloud"></i>
-  </button>
-</span>
-<span class="button-wrap">
-  <a href="http://unicorn-ui.com/" class="button button-pill ">Go</a>
-</span>
-<span class="button-wrap">
-  <a href="http://unicorn-ui.com/" class="button button-pill button-raised button-primary">Go</a>
-</span></section><code></code></section><section id="form" data-example="example" data-name="form" class="showcase"><h3>Button Form Elements h3</h3><section class="showcase-examples"><input type="submit" value="Go" class="button button-pill button-primary">
+<a href="http://unicorn-ui.com/" class="button button-block button-rounded button-royal button-large">Go</a></section><code></code></section><section id="form" data-example="example" data-name="form" class="showcase"><h3>Button Form Elements h3</h3><section class="showcase-examples"><input type="submit" value="Go" class="button button-pill button-primary">
 <button class="button button-pill button-primary">Go</button>
 
 <!-- DISABLED BUTTONS -->
