--- a/production/buttons/builder/index.html
+++ b/production/buttons/builder/index.html
@@ -186,7 +186,7 @@
 <a href="http://unicorn-ui.com/" class="button button-royal button-pill button-giant">Go</a>
 <button class="button button-royal button-square button-giant"><i class="fa fa-plus"></i></button>
 <button class="button button-royal button-box button-giant"><i class="fa fa-plus"></i></button>
-<button class="button button-royal button-circle button-giant"><i class="fa fa-plus"></i></button></section><code></code></section><section id="longshadow" data-type="example" data-name="longshadow" class="showcase"><h3>Longshadow</h3><section class="showcase-examples"><a href="#" class="button button-primary button-box button-giant button-longshadow-right">
+<button class="button button-royal button-circle button-giant"><i class="fa fa-plus"></i></button></section><code></code></section><section id="longshadow" data-type="build" data-name="longshadow" class="showcase"><h3>Longshadow</h3><section class="showcase-examples"><a href="#" class="button button-primary button-box button-giant button-longshadow-right">
  <i class="fa fa-twitter"></i>
 </a>
 <a href="#" class="button button-caution button-box button-giant button-raised button-longshadow">
