--- a/production/buttons/builder/index.html
+++ b/production/buttons/builder/index.html
@@ -17,9 +17,9 @@
   </script><a href="https://twitter.com/share" data-url="http://unicorn-ui.com/buttons/builder/" data-text="Buttons - a customizable CSS button library built with Sass &amp;amp; Compass" class="twitter-share-button">Tweet</a><script type="text/javascript">!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></section></section></header><section class="page"><section id="raised" data-type="build" data-name="raised" class="showcase"><h3>Raised Buttons</h3><section class="showcase-examples"><a href="#" class="button button-raised">press me</a>
 <a href="#" class="button button-primary button-raised">press me</a>
 <a href="#" class="button button-raised button-pill">press me</a>
-<a href="#" class="button button-pill button-action">press me</a>
-<a href="#" class="button button-pill button-highlight">press me</a>
-<a href="#" class="button button-pill button-caution">press me</a></section><code></code></section><section id="glow" data-type="build" data-name="glow" class="showcase"><h3>Glow Buttons</h3><section class="showcase-examples"><a href="#" class="button button-glow ">press me</a>
+<a href="#" class="button button-pill button-raised button-action">press me</a>
+<a href="#" class="button button-pill button-raised button-highlight">press me</a>
+<a href="#" class="button button-pill button-raised button-caution">press me</a></section><code></code></section><section id="glow" data-type="build" data-name="glow" class="showcase"><h3>Glow Buttons</h3><section class="showcase-examples"><a href="#" class="button button-glow ">press me</a>
 <a href="#" class="button button-glow button-primary">press me</a>
 <a href="#" class="button button-glow button-action">press me</a>
 <a href="#" class="button button-glow button-highlight">press me</a>
