--- a/production/buttons/js/zeroclipboard/README.html
+++ b/production/buttons/js/zeroclipboard/README.html
@@ -52,4 +52,4 @@ can still have rollover and mousedown effects with just a <em>little</em> extra 
 <p>see <a href="https://github.com/zeroclipboard/zeroclipboard/releases">releases</a></p>
 <h2>Roadmap</h2>
 <p>see <a href="docs/roadmap.md">roadmap.md</a></p>
-<script src="js/libs/vendor.js"></script></body></html>
+</body></html>
