--- a/production/buttons/svg-demo/js/zeroclipboard/CONTRIBUTING.html
+++ b/production/buttons/svg-demo/js/zeroclipboard/CONTRIBUTING.html
@@ -12,4 +12,4 @@ $ grunt</code></pre>
 $ grunt</code></pre>
 <h3>Testing</h3>
 <pre><code class="language-sh">$ grunt test</code></pre>
-<script src="js/libs/vendor.js"></script></body></html>
+</body></html>
