--- a/production/buttons/index.html
+++ b/production/buttons/index.html
@@ -678,7 +678,7 @@
 
 
   <!-- JAVASCRIPT INCLUDES -->
-  <script src="https://google-code-prettify.googlecode.com/svn/loader/prettify.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/scrollMonitor.js"></script>
   <script type="text/javascript" src="js/zeroclipboard/dist/ZeroClipboard.js"></script>
