--- a/public/buttons/svg-demo/index.html
+++ b/public/buttons/svg-demo/index.html
@@ -210,7 +210,7 @@
 
 
   <!-- JAVASCRIPT INCLUDES -->
-  <script src="https://google-code-prettify.googlecode.com/svn/loader/prettify.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.js"></script>
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   <script type="text/javascript" src="js/scrollMonitor.js"></script>
   <script type="text/javascript" src="js/polyfill.js"></script>
